<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">InsServer</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_connect">Open connection</string>
    <string name="clientstatusText">Client Status: </string>
    <string name="ready">Ready</string>
    <string name="notready">Not Ready</string>
    <string name="stop">Stop</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="live">Live</string>
    <string name="lowacc">Acccuracy Low</string>
    <string name="off">Off</string>
    <string name="name">Name</string>
    <string name="walk">Walk</string>
    <string name="turn">Turn</string>
    <string name="shoreline">Follow Shore line</string>
    <string name="inst1">1. Pair bluetooth devices in system preferences.</string>
    <string name="inst2">2. Open connection on server device</string>
    <string name="inst3">3. Connect on client device through menu options and select server device.</string>
    <string name="inst4">4. Type in name of testee and click menu option to set name.</string><string name="inst5">5. Start log with button on server device.</string>
    <string name="inst6">6. Run tests.</string>
    <string name="inst7">7. Stop and log with button on server device.</string>
    <string name="inst8">*Client has to touch screen to let server device know it is ready.</string><string name="inst9">*If connection lost save current log by choosing &quot;End log&quot; on client device.</string>
    
    <string name="inst10">*Log files found on local drive in &quot;logs&quot; folder</string>
    

</resources>