<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_settings"/>
    <item android:id="@+id/connect" android:title="@string/menu_connect" android:showAsAction="never" android:onClick="connectDevice"></item>
    <item android:id="@+id/disconnect" android:title="@string/menu_disconnect" android:showAsAction="never" android:onClick="disconnectDevice"></item>
    <item android:id="@+id/edit" android:onClick="editWords" android:showAsAction="never" android:title="Edit Words"></item>
    <item android:id="@+id/retdefault" android:onClick="retDefault" android:showAsAction="never" android:title="Return to defaults"></item>

</menu>